# cowboy-ha

./: .devcontainer.json  .gitignore  LICENSE  README.md  flake.nix  hacs.json  pyproject.toml  pytest.ini  requirements.txt
.github/: release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release-drafter.yml  release.yml  test.yml  validate.yml
custom_components/cowboy/: __init__.py  _client.py  api.http  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  icons.json  manifest.json  sensor.py  strings.json  update.py
custom_components/cowboy/translations/: en.json  pt.json
docs/: Gemfile  _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/specs/: cleanup.md  diagnostics.md  extra-sensors.md  multi-bike.md  options-flow.md  trips.md  update-entity.md
scripts/: develop  setup
tests/: conftest.py  test_diagnostics.py  test_init.py  test_sensor.py  test_update.py
