[tool.poetry]
name = "home-assistant"
version = "1.0.0"
description = ""
authors = ["Simon Elsbrock <simon@iodev.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.12.3"

[tool.poetry.group.dev.dependencies]
# https://github.com/home-assistant/core/issues/95192
urllib3 = "2.2.3"
ruff = "^0.7.3"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
