[tool.poetry]
name = "cowboy-ha"
version = "1.0.0"
description = ""
authors = ["Simon Elsbrock <simon@iodev.org>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.12.3"

[tool.poetry.group.dev.dependencies]
# https://github.com/home-assistant/core/issues/95192
urllib3 = "2.3.0"
ruff = "^0.9.4"
colorlog = "^6.9.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowboy-ha"
version = "1.0.0"
description = ""
authors = [
    { name = "Simon Elsbrock", email = "simon@iodev.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.91",
    "pytest-asyncio>=0.21.0",
    "black",
    "pylint",
    "pre-commit"
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/cowboy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "custom_components"]
asyncio_mode = "auto"
